[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Tools.gd" type="Script" id=1]
[ext_resource path="res://Assets/tools_axe.png" type="Texture" id=2]
[ext_resource path="res://Assets/Log.png" type="Texture" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 12.9999
height = 37.7364

[sub_resource type="CapsuleShape2D" id=2]
radius = 5.0
height = 44.0

[node name="ToolsAxe" type="Area2D" groups=[
"Tools",
]]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
offset = Vector2( 0, -15 )
hframes = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, -5 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
position = Vector2( 1, -14 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( 0, 10 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="Icon" type="Sprite" parent="."]
visible = false
position = Vector2( 5, 1 )
texture = ExtResource( 3 )
offset = Vector2( 3, -35 )

[node name="Label" type="Label" parent="Icon"]
margin_left = -18.0
margin_top = -37.0
margin_right = 22.0
margin_bottom = -23.0
rect_scale = Vector2( 0.5, 0.5 )
text = "1x"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="." to="." method="_on_ToolsAxe_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_ToolsAxe_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
